# opr

./: README.rst  pyproject.toml
mods/: err.py  flt.py  fnd.py  log.py  mbx.py  mdl.py  rst.py  tdo.py  thr.py  udp.py
opr/modules/: cmd.py  irc.py  rss.py  tmr.py
