[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "opr"
description = "objects library"
version = "500"
authors = [
    {name = "Bart Thate",email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/opr"
"bugs" = "https://github.com/xobjectz/opr/issues"
"source" = "https://github.com/xobjectz/opr"


[tool.setuptools]
script-files = [
    'bin/opr',
]
packages = [
    "opr",
    "opr.modules"
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/vop" = [
    "README.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
